native/musashi/m68kcpu/M68kcpuLibrary.java

	/** <i>native declaration : m68kcpu.h</i> */
	public static final long ZFLAG_CLEAR = (long)0xffffffffL;
	/** <i>native declaration : m68kcpu.h</i> */
	public static final int SFLAG_SET = (int)4;
	/** <i>native declaration : m68kcpu.h</i> */
	public static final int SFLAG_CLEAR = (int)0;
	/** <i>native declaration : m68kcpu.h</i> */
	public static final int MFLAG_SET = (int)2;
	/** <i>native declaration : m68kcpu.h</i> */
	public static final int MFLAG_CLEAR = (int)0;
	/** <i>native declaration : m68k.h</i> */
	public static abstract class M68K_BUS_WRITE extends Callback<M68K_BUS_WRITE > {
		public abstract void apply(int int1, int int2, int int3);
	};
	/** <i>native declaration : m68k.h</i> */
	public static abstract class M68K_BUS_READ extends Callback<M68K_BUS_READ > {
		public abstract int apply(int int1, int int2);
	};
	/** <i>native declaration : m68k.h:229</i> */
	public static abstract class m68k_set_int_ack_callback_callback_callback extends Callback<m68k_set_int_ack_callback_callback_callback > {
		public abstract int apply(int int_level);
	};
	/** <i>native declaration : m68k.h:238</i> */
	public static abstract class m68k_set_bkpt_ack_callback_callback_callback extends Callback<m68k_set_bkpt_ack_callback_callback_callback > {
		public abstract void apply(int data);
	};
	/** <i>native declaration : m68k.h:246</i> */
	public static abstract class m68k_set_reset_instr_callback_callback_callback extends Callback<m68k_set_reset_instr_callback_callback_callback > {
		public abstract void apply();
	};
	/** <i>native declaration : m68k.h:255</i> */
	public static abstract class m68k_set_pc_changed_callback_callback_callback extends Callback<m68k_set_pc_changed_callback_callback_callback > {
		public abstract void apply(int new_pc);
	};
	/** <i>native declaration : m68k.h:262</i> */
	public static abstract class m68k_set_tas_instr_callback_callback_callback extends Callback<m68k_set_tas_instr_callback_callback_callback > {
		public abstract int apply();
	};
	/** <i>native declaration : m68k.h:270</i> */
	public static abstract class m68k_set_illg_instr_callback_callback_callback extends Callback<m68k_set_illg_instr_callback_callback_callback > {
		public abstract int apply(int int1);
	};
	/** <i>native declaration : m68k.h:279</i> */
	public static abstract class m68k_set_fc_callback_callback_callback extends Callback<m68k_set_fc_callback_callback_callback > {
		public abstract void apply(int new_fc);
	};
	/** <i>native declaration : m68k.h:288</i> */
	public static abstract class m68k_set_instr_hook_callback_callback_callback extends Callback<m68k_set_instr_hook_callback_callback_callback > {
		public abstract void apply(int pc);
	};
	/**
	 * Original signature : <code>void m68k_set_bus_read_callback(M68K_BUS_READ)</code><br>
	 * <i>native declaration : m68k.h:169</i>
	 */
	public static void m68k_set_bus_read_callback(Pointer<M68kcpuLibrary.M68K_BUS_READ > readFn) {
		m68k_set_bus_read_callback(Pointer.getPeer(readFn));
	}
	protected native static void m68k_set_bus_read_callback(@Ptr long readFn);
	/**
	 * Original signature : <code>void m68k_set_bus_write_callback(M68K_BUS_WRITE)</code><br>
	 * <i>native declaration : m68k.h:170</i>
	 */
	public static void m68k_set_bus_write_callback(Pointer<M68kcpuLibrary.M68K_BUS_WRITE > writeFn) {
		m68k_set_bus_write_callback(Pointer.getPeer(writeFn));
	}
	protected native static void m68k_set_bus_write_callback(@Ptr long writeFn);
	/**
	 * Read from anywhere<br>
	 * Original signature : <code>int m68k_read_memory_8(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:173</i>
	 */
	public static native int m68k_read_memory_8(int address);
	/**
	 * Original signature : <code>int m68k_read_memory_16(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:174</i>
	 */
	public static native int m68k_read_memory_16(int address);
	/**
	 * Original signature : <code>int m68k_read_memory_32(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:175</i>
	 */
	public static native int m68k_read_memory_32(int address);
	/**
	 * Read data immediately following the PC<br>
	 * Original signature : <code>int m68k_read_immediate_16(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:178</i>
	 */
	public static native int m68k_read_immediate_16(int address);
	/**
	 * Original signature : <code>int m68k_read_immediate_32(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:179</i>
	 */
	public static native int m68k_read_immediate_32(int address);
	/**
	 * Read data relative to the PC<br>
	 * Original signature : <code>int m68k_read_pcrelative_8(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:182</i>
	 */
	public static native int m68k_read_pcrelative_8(int address);
	/**
	 * Original signature : <code>int m68k_read_pcrelative_16(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:183</i>
	 */
	public static native int m68k_read_pcrelative_16(int address);
	/**
	 * Original signature : <code>int m68k_read_pcrelative_32(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:184</i>
	 */
	public static native int m68k_read_pcrelative_32(int address);
	/**
	 * Memory access for the disassembler<br>
	 * Original signature : <code>int m68k_read_disassembler_8(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:187</i>
	 */
	public static native int m68k_read_disassembler_8(int address);
	/**
	 * Original signature : <code>int m68k_read_disassembler_16(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:188</i>
	 */
	public static native int m68k_read_disassembler_16(int address);
	/**
	 * Original signature : <code>int m68k_read_disassembler_32(unsigned int)</code><br>
	 * <i>native declaration : m68k.h:189</i>
	 */
	public static native int m68k_read_disassembler_32(int address);
	/**
	 * Write to anywhere<br>
	 * Original signature : <code>void m68k_write_memory_8(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:192</i>
	 */
	public static native void m68k_write_memory_8(int address, int value);
	/**
	 * Original signature : <code>void m68k_write_memory_16(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:193</i>
	 */
	public static native void m68k_write_memory_16(int address, int value);
	/**
	 * Original signature : <code>void m68k_write_memory_32(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:194</i>
	 */
	public static native void m68k_write_memory_32(int address, int value);
	/**
	 * Special call to simulate undocumented 68k behavior when move.l with a<br>
	 * predecrement destination mode is executed.<br>
	 * To simulate real 68k behavior, first write the high word to<br>
	 * [address+2], and then write the low word to [address].<br>
	 * Enable this functionality with M68K_SIMULATE_PD_WRITES in m68kconf.h.<br>
	 * Original signature : <code>void m68k_write_memory_32_pd(unsigned int, unsigned int)</code><br>
	 * <i>native declaration : m68k.h:203</i>
	 */
	public static native void m68k_write_memory_32_pd(int address, int value);
	/**
	 * Set the callback for an interrupt acknowledge.<br>
	 * You must enable M68K_EMULATE_INT_ACK in m68kconf.h.<br>
	 * The CPU will call the callback with the interrupt level being acknowledged.<br>
	 * The host program must return either a vector from 0x02-0xff, or one of the<br>
	 * special interrupt acknowledge values specified earlier in this header.<br>
	 * If this is not implemented, the CPU will always assume an autovectored<br>
	 * interrupt, and will automatically clear the interrupt request when it<br>
	 * services the interrupt.<br>
	 * Default behavior: return M68K_INT_ACK_AUTOVECTOR.<br>
	 * Original signature : <code>void m68k_set_int_ack_callback(m68k_set_int_ack_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:229</i>
	 */
	public static void m68k_set_int_ack_callback(Pointer<M68kcpuLibrary.m68k_set_int_ack_callback_callback_callback > callback) {
		m68k_set_int_ack_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_int_ack_callback(@Ptr long callback);
	/**
	 * Set the callback for a breakpoint acknowledge (68010+).<br>
	 * You must enable M68K_EMULATE_BKPT_ACK in m68kconf.h.<br>
	 * The CPU will call the callback with whatever was in the data field of the<br>
	 * BKPT instruction for 68020+, or 0 for 68010.<br>
	 * Default behavior: do nothing.<br>
	 * Original signature : <code>void m68k_set_bkpt_ack_callback(m68k_set_bkpt_ack_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:238</i>
	 */
	public static void m68k_set_bkpt_ack_callback(Pointer<M68kcpuLibrary.m68k_set_bkpt_ack_callback_callback_callback > callback) {
		m68k_set_bkpt_ack_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_bkpt_ack_callback(@Ptr long callback);
	/**
	 * Set the callback for the RESET instruction.<br>
	 * You must enable M68K_EMULATE_RESET in m68kconf.h.<br>
	 * The CPU calls this callback every time it encounters a RESET instruction.<br>
	 * Default behavior: do nothing.<br>
	 * Original signature : <code>void m68k_set_reset_instr_callback(m68k_set_reset_instr_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:246</i>
	 */
	public static void m68k_set_reset_instr_callback(Pointer<M68kcpuLibrary.m68k_set_reset_instr_callback_callback_callback > callback) {
		m68k_set_reset_instr_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_reset_instr_callback(@Ptr long callback);
	/**
	 * Set the callback for informing of a large PC change.<br>
	 * You must enable M68K_MONITOR_PC in m68kconf.h.<br>
	 * The CPU calls this callback with the new PC value every time the PC changes<br>
	 * by a large value (currently set for changes by longwords).<br>
	 * Default behavior: do nothing.<br>
	 * Original signature : <code>void m68k_set_pc_changed_callback(m68k_set_pc_changed_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:255</i>
	 */
	public static void m68k_set_pc_changed_callback(Pointer<M68kcpuLibrary.m68k_set_pc_changed_callback_callback_callback > callback) {
		m68k_set_pc_changed_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_pc_changed_callback(@Ptr long callback);
	/**
	 * Set the callback for the TAS instruction.<br>
	 * You must enable M68K_TAS_HAS_CALLBACK in m68kconf.h.<br>
	 * The CPU calls this callback every time it encounters a TAS instruction.<br>
	 * Default behavior: return 1, allow writeback.<br>
	 * Original signature : <code>void m68k_set_tas_instr_callback(m68k_set_tas_instr_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:262</i>
	 */
	public static void m68k_set_tas_instr_callback(Pointer<M68kcpuLibrary.m68k_set_tas_instr_callback_callback_callback > callback) {
		m68k_set_tas_instr_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_tas_instr_callback(@Ptr long callback);
	/**
	 * Set the callback for illegal instructions.<br>
	 * You must enable M68K_ILLG_HAS_CALLBACK in m68kconf.h.<br>
	 * The CPU calls this callback every time it encounters an illegal instruction<br>
	 * which must return 1 if it handles the instruction normally or 0 if it's really an illegal instruction.<br>
	 * Default behavior: return 0, exception will occur.<br>
	 * Original signature : <code>void m68k_set_illg_instr_callback(m68k_set_illg_instr_callback_callback_callback*)</code><br>
	 * <i>native declaration : m68k.h:270</i>
	 */
	public static void m68k_set_illg_instr_callback(Pointer<M68kcpuLibrary.m68k_set_illg_instr_callback_callback_callback > callback) {
		m68k_set_illg_instr_callback(Pointer.getPeer(callback));
	}
	protected native static void m68k_set_illg_instr_callback(@Ptr long callback);
